In the middle of implementing Morpheus - wonder if I am off on theoretical masses - tests fail but nothing should be broken